# zynamic

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  reflective_pe.cpp
.github/workflows/: gh-pages.yaml  gh-pages.yml
docs/: poxy.toml
include/zynamic/: Zynamic  zynamic.hpp
src/: CMakeLists.txt  Zynamic.cpp
src/zynamic/: CMakeLists.txt  main.cpp  zynamic.cpp
src/zynamic/view/: main_window.cpp  main_window.hpp
